<?xml version="1.0" encoding="utf-8"?>

<!--
Tyler Allen
Last Updated: 09/29/14
String reference file.
-->


<resources>
    <string name="app_name">Tomokumo</string>
    <string name="email">Email Address</string>
    <string name="pass">Password</string>
    <string name="repeat_pass">Confirm Password</string>
    <string name="missing_acc">Don\'t have an account?</string>
    <string name="login">Log In</string>
    <string name="register">Sign Up</string>
    <string name="sign_up"><u>Sign Up!</u></string>
    <string name="pick_account">Please pick an account to continue</string>

    <string name="settings">Settings</string>
    <string name="privacy_settings">Privacy Settings</string>
    <string name="sound">Sound</string>
    <string name="pub_sched">Public Schedule</string>

    <string name="invite_settings">Allow Invites from Friends Only</string>

    <string name="event_priv_settings">Make Events Attending Public</string>

    <string name="key">AIzaSyDH7vHUVd0T852u98Ymq0W4T54kGydlqGE</string>

    <string name="eventname">Event Name</string>
    <string name="timedate">Time/Date filler</string>
    <string name="location">Location</string>
    <string name="information">Information:</string>
    <string name="placeholder_message">Placeholder Message</string>

    <string name="authority">edu.wcu.cs.agora.FriendFinder</string>




</resources>

<!-- old key: AIzaSyANvTxkYoSOzfBbdflsx-otMQbYmN3MW7w -->