<?xml version="1.0" encoding="utf-8"?>

<!--
Karen Dana
Last Updated: 11/30/14
Dynamically generated page representing an event.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:weightSum="6"
              android:padding="20dp"
              android:background="@color/blue">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/eventname"
            android:textSize="50sp"
            android:textColor="@color/white"
            android:id="@+id/friend"
            android:layout_weight="1"
            android:gravity="center"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/timedate"
            android:layout_marginTop="20dp"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:layout_weight="1"/>

    <LinearLayout android:layout_width="match_parent"
              android:layout_height="0dp"
              android:orientation="horizontal"
              android:weightSum="3"
              android:layout_weight="1" >

        <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/location"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:layout_weight="2"/>

            <!-- Placeholder for maps icon -->
        <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:text="Map"/>
                <!--android:background="@drawable/go"-->
    </LinearLayout>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/information"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:layout_weight="1"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/placeholder_message"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_weight="2"/>
</LinearLayout>