<?xml version="1.0" encoding="utf-8"?>

<!--
Karen Dana
Last Updated: 11/20/14
Log in page.
-->



<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:weightSum="8"
              android:padding="20dp"
              android:background="@color/blue">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/app_name"
                android:gravity="center"
                android:textSize="45sp"
                android:textColor="@color/white"
                android:id="@+id/finder"
                android:textStyle="bold"
                android:layout_weight="2"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:background="@color/white"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:id="@+id/email"
                android:layout_margin="10dp"
                android:hint="@string/email"
                android:singleLine="true"
                android:ellipsize="start"
                android:gravity="center"
                android:layout_weight="1"
                android:alpha="0.23"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:inputType="textPassword"
                android:background="@color/white"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:ems="10"
                android:id="@+id/pass"
                android:layout_margin="10dp"
                android:hint="@string/pass"
                android:singleLine="true"
                android:ellipsize="start"
                android:gravity="center"
                android:layout_weight="1"
                android:alpha="0.23"/>

        <!-- replace with custom buttons -->
        <Button
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:id="@+id/login"
                android:clickable="true"
                android:layout_gravity="center"
                android:scaleType="centerInside"
                android:textSize="15sp"
                android:text="Log In"/>
                <!--android:layout_marginLeft="100dp"-->
                <!--android:layout_marginRight="100dp"-->
                <!--android:background="@drawable/button1"-->

        <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:ems="10"
                android:hint="@string/missing_acc"
                android:textColorHint="@color/dk_grey"
                android:singleLine="true"
                android:ellipsize="start"
                android:gravity="bottom|center"
                android:layout_weight="0.6"/>

        <TextView android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/sign_up"
                android:id="@+id/register"
                android:gravity="top|center"
                android:textColor="@color/dk_grey"
                android:ems="10"
                android:onClick="onClick"
                android:singleLine="true"
                android:clickable="true"
                android:linksClickable="true"/>

    <Button
        android:gravity="center"
        android:layout_gravity="center"
        android:id="@+id/google"
        android:text="Log In with Google"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"/>

</LinearLayout>