<?xml version="1.0" encoding="utf-8"?>

<!--
Tyler Allen
Karen Dana
Last Updated: 10/20/14
Registration page.
-->


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:weightSum="7"
              android:padding="20dp"
              android:background="@color/blue">



    <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/register"
            android:textSize="60sp"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_weight="2"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/email"
            android:hint="@string/email"
            android:textColorHint="@color/black"
            android:background="@color/white"
            android:alpha="0.23"
            android:textColor="@color/black"
            android:singleLine="true"
            android:layout_margin="20dp"
            android:ellipsize="start"
            android:gravity="center"
            android:layout_weight="1"/>


    <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/pass"
            android:hint="@string/pass"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:layout_margin="20dp"
            android:background="@color/white"
            android:alpha="0.23"
            android:singleLine="true"
            android:ellipsize="start"
            android:gravity="center"
            android:layout_weight="1"/>


    <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/repeat_pass"
            android:layout_margin="20dp"
            android:hint="@string/repeat_pass"
            android:background="@color/white"
            android:alpha="0.23"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:singleLine="true"
            android:ellipsize="start"
            android:gravity="center"
            android:layout_weight="1"/>


    <!-- replace with custom buttons -->
    <Button
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/sign_up"
            android:layout_gravity="center|bottom"
            android:gravity="center"
            android:clickable="true"
            android:scaleType="centerInside"
            android:text="Sign Up"/>
    <!--android:background="@drawable/button1"-->

</LinearLayout>