<?xml version="1.0" encoding="utf-8"?>

<!--
Tyler Allen
Karen Dana
Last Updated: 09/29/14
A user's general app settings.
-->


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical"
    android:weightSum="10">

    <!-- placeholder until we get a graphic -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/settings"
        android:textColor="@color/white"
        android:textSize="60sp" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:text="Hidden"
        android:textColor="@color/dk_grey"
        android:textSize="40sp" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.01"
        android:background="@color/dk_blue" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/privacy_settings"
        android:textColor="@color/dk_grey"
        android:textSize="40sp" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.01"
        android:background="@color/dk_blue" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/sound"
        android:textColor="@color/dk_grey"
        android:textSize="40sp" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>